--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-/* This was a simple project in which I analyzed weather patterns between my local area (Austin, TX) and the globe to check for any particular or interesting trends. It involved extracting and loading the necessary data using SQL and then analyzing the data in Excel or Google Sheets. */
-/* To start, I extracted my data using the following queries: */
+-- This was a simple project in which I analyzed weather patterns between my local area (Austin, TX) and the globe to check for any particular or interesting trends. It involved extracting and loading the necessary data using SQL and then analyzing the data in Excel or Google Sheets. */
+-- To start, I extracted my data using the following queries:
 
 SELECT g.year, 
        g.avg_temp AS global_avg_temp, 
@@ -9,7 +9,7 @@ FROM   global_data AS g
               ON g.year = c.year 
 WHERE  c.city = 'Austin'; 
 
-/* and... */
+-- and...
 
 SELECT    A.year, 
           A.avg_temp gl_temp, 
@@ -23,4 +23,4 @@ ON        A.year = C.year
 WHERE     B.city = 'Austin' 
 AND       C.city = 'San Francisco’;
 
-/* The results were analyzed according to availability. In other words, I analyzed trends between 1820 and 2013 which were the only available years based on the queries. */ 
+-- The results were analyzed according to availability. In other words, I analyzed trends between 1820 and 2013 which were the only available years based on the queries.
