--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-
+# SQL Showcase 
+This repository houses examples of SQL queries I've written for both work-related and personal projects.  To protect  client confidentiality work-related queries have been altered.
