--- a/README
+++ b/README
@@ -1,3 +1,46 @@
 # SQL Showcase 
 
 This repository houses examples of SQL queries I've written for both work-related and personal projects.  To protect  client confidentiality work-related queries have been altered.
+# Crime Analysis
+
+This repository houses examples of SQL queries I've written for both work-related and personal projects, focusing on crime analysis. The queries showcase data analysis and insights derived from crime datasets. Please note that work-related queries have been altered to protect client confidentiality.
+
+## Project Description
+
+The goal of this project is to perform in-depth analysis on crime data to identify patterns, trends, and insights. By leveraging SQL queries, we aim to gain a better understanding of crime incidents, identify high-crime areas, analyze crime rates over time, and explore correlations with various factors.
+
+## Installation
+
+To run the crime analysis project, follow these steps:
+
+1. Clone the repository to your local machine.
+2. Install the required dependencies, such as SQL database management system (e.g., MySQL, PostgreSQL).
+3. Set up the database and import the crime datasets. [Add specific instructions here if applicable]
+
+## Usage
+
+The repository includes a collection of SQL queries that can be used for crime analysis. Here are the steps to use them:
+
+1. Open your preferred SQL client or interface.
+2. Connect to the database where you imported the crime datasets.
+3. Execute the SQL queries from the provided scripts or use them as a reference to build your custom queries.
+4. Analyze the query results to gain insights into crime patterns, trends, and correlations.
+
+Please note that the provided SQL queries are for reference and may need to be modified based on your specific database structure and dataset.
+
+## Data Source and Confidentiality
+
+The crime datasets used in this analysis are sourced from [Specify the data source or organization]. It is important to mention that any work-related queries have been altered to protect client confidentiality and sensitive information.
+
+## Contributing
+
+Contributions to this repository are welcome. If you have suggestions, bug reports, or would like to contribute new SQL queries, please follow these guidelines:
+
+1. Fork the repository.
+2. Make your changes or additions in a separate branch.
+3. Submit a pull request, clearly explaining the changes made and the purpose of the new queries.
+
+## License
+
+This repository is licensed under the [Specify the license]. You are free to use, modify, and distribute the code as per the terms of the license.
+
